// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alter Color plugin should process a complex file correctly 1`] = `
"
body {
  background: white;
  color: #556832;
}

#article {
  border: solid 1px rgba(47,79,79,0.4);
}

.p {
  border: solid 1px #556832;
  background: #556832 0 0 no-repeat;
}

circle {
  fill: #556832;
}

@media screen and (min-width: 480px) {
  body {
    color: hsla(180,25%,25%,0.5);
    outline: solid #556832 1px;
  }
}
"
`;

exports[`Alter Color plugin should process a complex file correctly while preserving alpha channel 1`] = `
"
body {
  background: white;
  color: #556832;
}

#article {
  border: solid 1px rgba(85,104,50,0.4);
}

.p {
  border: solid 1px #556832;
  background: #556832 0 0 no-repeat;
}

circle {
  fill: #556832;
}

@media screen and (min-width: 480px) {
  body {
    color: rgba(85,104,50,0.5);
    outline: solid #556832 1px;
  }
}
"
`;
